[tool.poetry]
name = "repl_python3_beta_twitterbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Quart = "^0.15.1"
replit = "^3.2.4"
orjson = "^3.6.7"
Flask = "^2.1.1"
aiohttp = "^3.8.1"
yarl = "^1.7.2"
requests-oauthlib = "^1.3.1"
bson = "^0.5.10"
oauthlib = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
